# flowstate-app

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: main.rs
